# OpenCL-WeatherAnalysis

./: .gitignore  CMakeLists.txt  ParallelAssignment.sln  Parser.hpp  README.md  SimpleTimer.hpp  Utils.hpp  WeatherAnalysis.cpp  WeatherAnalysis.hpp  WeatherAnalysis.t.cpp  WeatherAnalysis.tpp  main.cpp
ParallelAssignment/: ParallelAssignment.vcxproj  ParallelAssignment.vcxproj.filters  kernels.cl  main.cpp
data/: ground_truth_table.xlsx
opencl/: kernels.cl
scripts/: ground_truth.m
